--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ While FLL is incredibly fun and educational activity, it is very expensive. Betw
   <div class="container">
     <h3 class="text-center">OUR COMPETITION DATE</h3>
     <ul class="list-group">
-      <li class="list-group-item text-center">To Be Decided</li>
+      <li class="list-group-item text-center">Nov. 19, 2016 - Godwin Highschool</li>
     </ul>
   </div>
 
